--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-div.div {
-    border: black 1px solid;
+body {
+    position: relative;
 }
+
 
 .div1 {
     width: 70%;
@@ -33,8 +34,9 @@ div.div {
 .container {
     display: flex;
     justify-content: space-between;
-    position: relative;
+    position: sticky;
     padding: 5px;
+    width: 100%;
 }
 
 .div2 h2 {
@@ -46,19 +48,38 @@ div.div {
 .div1 span {
     box-sizing: border-box;
     display: inline-block;
-    width: 100px;
+    width: 120px;
     padding: 5px;
-    height: 35px;
+    height: 30px;
     margin: 5px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 25px;
+    text-align: center;
+    align-items: center;
 }
 
 iframe {
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    width: 800px;
+    margin-left: 10%;
+    margin-right: 10%;
+    width: 75%;
     height: 1200px;
+    /* justify-content: center; */
+    /* position: absolute; */
+    /* top: 0px; */
+    /* left: 0px; */
 
+}
+
+a {
+    /* background-color: antiquewhite; */
+    color: black;
+    height: auto;
+    font-size: 20px;
+    width: auto;
+    border-radius: 15px;
+}
+
+a:hover {
+    transform: translate(1.1);
+    background-color: chartreuse;
 }
